Bug 285848 - inverted "Compact" and "Details" effects in "View properties" dialog
Summary: inverted "Compact" and "Details" effects in "View properties" dialog
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-05 19:14 UTC by Francesco Riosa
Modified: 2011-11-06 08:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
screenshot.png (153.00 KB, image/png)
2011-11-05 19:14 UTC, Francesco Riosa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Francesco Riosa 2011-11-05 19:14:02 UTC
Created attachment 65268 [details]
screenshot.png

Version:           1.99 (using Devel) 
OS:                Linux

commit 28a626cef9398d7191d78330f37223cfe3eea1ce
Date:   Tue Nov 1 18:52:25 2011 +0100

seem that "Compact" and "Details" have inverted meanings in "Adjust view Properties" dialog.

Attached screenshot show the result of applying "Compact" mode

Reproducible: Always

Steps to Reproduce:
"Adjust view Properties" -> "Details" ; Apply


Expected Results:  
Expected Results are not Expected Results
Comment 1 Peter Penz 2011-11-06 08:56:32 UTC
Git commit 9130b6ecb61496d84aa4419c54cba6f9bfe68f27 by Peter Penz.
Committed on 06/11/2011 at 09:53.
Pushed by ppenz into branch 'master'.

Fix issues with applying wrong view-mode

- The view properties dialog mixed the details-view with
  the compact-view (#285848).

- The view properties have been reset when applying a
  setting from the "Dolphin Preferences" dialog. The rootcause
  was that the obsolete DolphinSettings class implemented
  the saving in a wrong way because of the recent refactoring
  (will remove this class completely now to prevent such
  issues in future).

BUG: 285848
FIXED-IN: 4.8.0

M  +3    -8    dolphin/src/dolphinmainwindow.cpp
M  +23   -31   dolphin/src/settings/viewpropertiesdialog.cpp

http://commits.kde.org/kde-baseapps/9130b6ecb61496d84aa4419c54cba6f9bfe68f27