Fix issues with applying wrong view-mode

- The view properties dialog mixed the details-view with
  the compact-view (#285848).

- The view properties have been reset when applying a
  setting from the "Dolphin Preferences" dialog. The rootcause
  was that the obsolete DolphinSettings class implemented
  the saving in a wrong way because of the recent refactoring
  (will remove this class completely now to prevent such
  issues in future).

BUG: 285848
FIXED-IN: 4.8.0